# vdl

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  test_helpers.rs
src/cli/: commands.rs  mod.rs
src/codegen/: dot.rs  json.rs  markdown.rs  mod.rs  search.rs
src/graph/: mod.rs  node.rs  query.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  error.rs  mod.rs
src/validator/: error.rs  mod.rs  rules.rs
tests/: cli_test.rs  snapshot_test.rs
tests/fixtures/: divine_alignment.vdl  invalid_cycle.vdl  seven_laws.vdl
tests/tests/snapshot/: snapshot_test__snapshot_dot_output@dot_graph.snap  snapshot_test__snapshot_json_output@json_graph.snap  snapshot_test__snapshot_markdown_output@markdown.snap  snapshot_test__snapshot_search_output@search_index.snap
