[package]
name = "vdl"
version = "0.1.0"
edition = "2021"
authors = ["Khayren <khayren@voidlight.io>"]
description = "Voidlight Definition Language compiler"
license = "MIT"
repository = "https://github.com/voidlight-labs/vdl"

[[bin]]
name = "vdl"
path = "src/main.rs"

[lib]
name = "vdl"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chumsky = "0.9"
clap = { version = "4.5", features = ["derive"] }
indexmap = "2.2"
miette = { version = "7.2", features = ["fancy"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
insta = { version = "1.39", features = ["yaml", "json", "redactions"] }
tempfile = "3.10"
